--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}:${
 
 REDIS_PORT=6379
 
-HASH_KEY="o8q48FVK8MMw@GXpXnQZMs3ek2Pn6t"
+HASH_KEY="some_random_password_that_is_longer_than_36_characters"
 
 GOOGLE_CLIENT_ID=xxx
 GOOGLE_CLIENT_SECRET=xxx
