--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.0",
     "@prisma/client": "2.6.2",
+    "@hapi/iron": "^6.0.0",
     "apollo-server-micro": "^2.16.1",
     "class-validator": "^0.12.2",
     "cookie": "^0.4.1",
