--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,14 @@
 NEXT_PUBLIC_APP_NAME=Next App
-NEXT_PUBLIC_APP_URL=http://localhost:3000
 
-DATABASE_USER=postgres
-DATABASE_PASS=random
-DATABASE_HOST=localhost
-DATABASE_PORT=5432
-DATABASE_NAME=mydb
-DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASS}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
+DB_USER=postgres
+DB_PASS=random
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=mydb
 
 REDIS_PORT=6379
 
-HASH_KEY="some_random_password_that_is_longer_than_36_characters"
+ENCRYPT_SECRET="some_random_password_that_is_longer_than_36_characters"
 
 GOOGLE_CLIENT_ID=xxx
 GOOGLE_CLIENT_SECRET=xxx
