--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@graphql-codegen/typescript": "1.21.0",
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-react-apollo": "^2.2.2",
+    "@tailwindcss/jit": "^0.1.17",
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.14.32",
     "@types/passport": "1.0.6",
@@ -63,7 +64,7 @@
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.7",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.3",
+    "tailwindcss": "^2.0.4",
     "ttypescript": "^1.5.12",
     "typescript": "^4.2.2",
     "typescript-transform-paths": "^2.2.3"
