--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,9 @@
 NEXT_PUBLIC_APP_NAME=Next App
 
-DB_USER=postgres
-DB_PASS=random
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=mydb
-
+DB_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
 REDIS_PORT=6379
 
-ENCRYPT_SECRET="some_random_password_that_is_longer_than_36_characters"
+AUTH_SECRET="some_random_password_that_is_longer_than_36_characters"
 
 GOOGLE_CLIENT_ID=xxx
 GOOGLE_CLIENT_SECRET=xxx
