--- a/package.json
+++ b/package.json
@@ -1,16 +1,12 @@
 {
   "private": true,
   "scripts": {
-    "dev:app": "next",
-    "dev:server": "ttsc -p server --watch",
-    "build:app": "next build",
-    "build:server": "ttsc -p server",
-    "build": "npm run build:server && npm run build:app",
+    "dev": "next",
+    "build": "next build",
     "start": "next start --port $PORT",
-    "migrate:save": "typeorm migration:generate -n",
-    "migrate:deploy": "typeorm migration:run",
-    "migrate:rollback": "typeorm migration:revert",
-    "g:gql": "graphql-codegen --config graphql-codegen.yml"
+    "db-gen": "prisma generate",
+    "migrate-dev": "prisma migrate dev",
+    "gql-gen": "graphql-codegen --config graphql-codegen.yml"
   },
   "husky": {
     "hooks": {
@@ -24,6 +20,7 @@
   },
   "dependencies": {
     "@hapi/iron": "^6.0.0",
+    "@prisma/client": "^2.21.2",
     "apollo-server-micro": "^2.22.2",
     "class-validator": "^0.12.2",
     "cookie": "^0.4.1",
@@ -34,13 +31,11 @@
     "passport": "^0.4.1",
     "passport-github": "^1.1.0",
     "passport-google-oauth20": "^2.0.0",
-    "pg": "^8.5.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
-    "typeorm": "^0.2.29",
-    "urql": "^1.11.6"
+    "urql": "^2.0.2"
   },
   "devDependencies": {
     "@egoist/prettier-config": "^0.1.0",
@@ -48,8 +43,7 @@
     "@graphql-codegen/introspection": "1.18.1",
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
-    "@graphql-codegen/typescript-react-apollo": "^2.2.3",
-    "@tailwindcss/jit": "^0.1.17",
+    "@graphql-codegen/typescript-urql": "^2.0.5",
     "@types/cookie": "^0.4.0",
     "@types/node": "^14.14.37",
     "@types/passport": "1.0.6",
@@ -63,9 +57,11 @@
     "husky": "^4.3.8",
     "lint-staged": "^10.5.4",
     "postcss": "^8.2.9",
+    "preact": "^10.5.13",
     "prettier": "^2.2.1",
+    "prisma": "^2.21.2",
     "tailwindcss": "^2.1.1",
-    "ttypescript": "^1.5.12",
+    "ts-loader": "^8.1.0",
     "typescript": "^4.2.4",
     "typescript-transform-paths": "^2.2.3"
   }
