--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 NEXT_PUBLIC_APP_NAME=Next App
 
-DB_URL="postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public"
+DB_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
 REDIS_PORT=6379
 
 AUTH_SECRET="some_random_password_that_is_longer_than_36_characters"
