--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 NEXT_PUBLIC_APP_NAME=Next App
 
+# Set this to the production url of your app when deployed
+# https://next-auth.js.org/configuration/options#nextauth_url
+NEXTAUTH_URL=http://localhost:3000
+
 DB_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
 REDIS_PORT=6379
 
-AUTH_SECRET="some_random_password_that_is_longer_than_36_characters"
-
-GOOGLE_CLIENT_ID=xxx
-GOOGLE_CLIENT_SECRET=xxx
-
-GITHUB_CLIENT_ID=xxx
-GITHUB_CLIENT_SECRET=xxx
+GITHUB_ID=xxx
+GITHUB_SECRET=xxx
