--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
     "@prisma/client": "^2.21.2",
     "apollo-server-micro": "^2.22.2",
     "class-validator": "^0.13.1",
-    "cookie": "^0.4.1",
     "graphql": "^15.5.0",
     "next": "^10.1.3",
+    "next-auth": "^3.14.8",
     "next-connect": "^0.10.1",
-    "passport": "^0.4.1",
-    "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
@@ -40,7 +37,7 @@
     "@graphql-codegen/typescript": "1.21.1",
     "@graphql-codegen/typescript-operations": "1.17.15",
     "@graphql-codegen/typescript-urql": "^2.0.5",
-    "@types/cookie": "^0.4.0",
+    "@types/next-auth": "^3.13.0",
     "@types/node": "^14.14.37",
     "@types/passport": "1.0.6",
     "@types/passport-github": "^1.1.5",
