custom auth solution

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,14 @@
 NEXT_PUBLIC_APP_NAME=Next App
+NEXT_PUBLIC_APP_DOMAIN=
 
-# Set this to the production url of your app when deployed
-# https://next-auth.js.org/configuration/options#nextauth_url
-NEXTAUTH_URL=http://localhost:3000
+AUTH_SECRET=xxx
+AUTH_COOKIE_NAME=app.auth
+AUTH_COOKIE_DOMAIN=
 
-DB_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
-REDIS_PORT=6379
+DATABASE_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
 
-GITHUB_ID=xxx
-GITHUB_SECRET=xxx
+GITHUB_CLIENT_ID=xxx
+GITHUB_CLIENT_SECRET=xxx
+
+GOOGLE_CLIENT_ID=
+GOOGLE_CLIENT_SECRET=
