--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@prisma/client": "^2.24.1",
     "apollo-server-micro": "^2.25.1",
     "class-validator": "^0.13.1",
+    "cookie": "^0.4.1",
     "graphql": "^15.5.0",
+    "jsonwebtoken": "^8.5.1",
     "next": "^10.2.3",
-    "next-auth": "^3.26.1",
     "next-connect": "^0.10.1",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
+    "passport-google-oauth20": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "reflect-metadata": "^0.1.13",
@@ -37,7 +41,8 @@
     "@graphql-codegen/typescript": "1.22.1",
     "@graphql-codegen/typescript-operations": "1.18.0",
     "@graphql-codegen/typescript-urql": "^2.0.7",
-    "@types/next-auth": "^3.15.0",
+    "@types/cookie": "^0.4.0",
+    "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^14.14.37",
     "@types/passport": "1.0.6",
     "@types/passport-github": "^1.1.5",
