--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "apollo-server-micro": "^3.5.0",
     "class-validator": "^0.13.1",
     "cookie": "^0.4.1",
-    "graphql": "^16.0.1",
+    "cors": "^2.8.5",
+    "graphql": "^15.0.0",
     "jsonwebtoken": "^8.5.1",
-    "next": "^12.0.4",
+    "micro": "^9.3.4",
+    "next": "^12.0.7",
     "next-connect": "^0.11.0",
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
@@ -41,6 +43,7 @@
     "@graphql-codegen/typescript-operations": "2.2.0",
     "@graphql-codegen/typescript-urql": "^3.4.0",
     "@types/cookie": "^0.4.0",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.2",
     "@types/node": "^16.4.10",
     "@types/passport": "1.0.7",
@@ -59,6 +62,6 @@
     "prisma": "^3.5.0",
     "tailwindcss": "^2.2.2",
     "ts-loader": "^9.2.6",
-    "typescript": "^4.3.4"
+    "typescript": "^4.5.2"
   }
 }
