--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "^3.5.0",
+    "@next-auth/prisma-adapter": "^0.5.2-next.19",
+    "@prisma/client": "^3.6.0",
+    "apollo-server-core": "^3.5.0",
     "apollo-server-micro": "^3.5.0",
     "class-validator": "^0.13.1",
     "cookie": "^0.4.1",
@@ -25,6 +27,7 @@
     "jsonwebtoken": "^8.5.1",
     "micro": "^9.3.4",
     "next": "^12.0.7",
+    "next-auth": "^4.0.2",
     "next-connect": "^0.11.0",
     "passport": "^0.5.0",
     "passport-github": "^1.1.0",
@@ -59,7 +62,7 @@
     "postcss": "^8.3.5",
     "preact": "^10.5.13",
     "prettier": "^2.3.1",
-    "prisma": "^3.5.0",
+    "prisma": "^3.6.0",
     "tailwindcss": "^2.2.2",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.2"
