--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,5 @@
 NEXT_PUBLIC_APP_NAME=Next App
-NEXT_PUBLIC_APP_DOMAIN=
-
-AUTH_SECRET=xxx
-AUTH_COOKIE_NAME=app.auth
-AUTH_COOKIE_DOMAIN=
+NEXTAUTH_URL=http://localhost:3000
 
 DATABASE_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
 
