--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
 
 AUTH_COOKIE_NAME=app.session-token
+# Optional
+AUTH_COOKIE_DOMAIN=
+
+# openssl rand -base64 32
+AUTH_SECRET=xxx
