chore(deps): pin dependencies (#368)
Co-authored-by: Renovate Bot <bot@renovateapp.com>

--- a/package.json
+++ b/package.json
@@ -16,55 +16,55 @@
     ]
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^0.5.2-next.19",
-    "@prisma/client": "^3.6.0",
+    "@next-auth/prisma-adapter": "0.5.4",
+    "@prisma/client": "3.7.0",
     "apollo-server-core": "^3.5.0",
     "apollo-server-micro": "^3.5.0",
-    "class-validator": "^0.13.1",
-    "cookie": "^0.4.1",
-    "cors": "^2.8.5",
-    "graphql": "^15.0.0",
-    "jsonwebtoken": "^8.5.1",
-    "micro": "^9.3.4",
-    "next": "^12.0.7",
-    "next-auth": "^4.0.2",
-    "next-connect": "^0.11.0",
-    "passport": "^0.5.0",
-    "passport-github": "^1.1.0",
-    "passport-google-oauth20": "^2.0.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "reflect-metadata": "^0.1.13",
-    "type-graphql": "^1.1.1",
-    "urql": "^2.0.5"
+    "class-validator": "0.13.2",
+    "cookie": "0.4.1",
+    "cors": "2.8.5",
+    "graphql": "15.8.0",
+    "jsonwebtoken": "8.5.1",
+    "micro": "9.3.4",
+    "next": "12.0.7",
+    "next-auth": "4.0.6",
+    "next-connect": "0.11.0",
+    "passport": "0.5.2",
+    "passport-github": "1.1.0",
+    "passport-google-oauth20": "2.0.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "reflect-metadata": "0.1.13",
+    "type-graphql": "1.1.1",
+    "urql": "2.0.6"
   },
   "devDependencies": {
-    "@egoist/prettier-config": "^0.1.0",
-    "@graphql-codegen/cli": "^2.3.0",
+    "@egoist/prettier-config": "0.1.0",
+    "@graphql-codegen/cli": "2.3.1",
     "@graphql-codegen/introspection": "2.1.0",
     "@graphql-codegen/typescript": "2.4.0",
     "@graphql-codegen/typescript-operations": "2.2.0",
-    "@graphql-codegen/typescript-urql": "^3.4.0",
-    "@types/cookie": "^0.4.0",
-    "@types/cors": "^2.8.12",
-    "@types/jsonwebtoken": "^8.5.2",
-    "@types/node": "^16.4.10",
+    "@graphql-codegen/typescript-urql": "3.4.2",
+    "@types/cookie": "0.4.1",
+    "@types/cors": "2.8.12",
+    "@types/jsonwebtoken": "8.5.6",
+    "@types/node": "16.11.19",
     "@types/passport": "1.0.7",
-    "@types/passport-github": "^1.1.5",
-    "@types/passport-google-oauth20": "^2.0.8",
-    "@types/react": "^17.0.11",
-    "@types/react-dom": "^17.0.9",
-    "autoprefixer": "^10.2.6",
-    "dotenv": "^10.0.0",
-    "dotenv-expand": "^5.1.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.0.2",
-    "postcss": "^8.3.5",
-    "preact": "^10.5.13",
-    "prettier": "^2.3.1",
-    "prisma": "^3.6.0",
-    "tailwindcss": "^2.2.2",
-    "ts-loader": "^9.2.6",
-    "typescript": "^4.5.2"
+    "@types/passport-github": "1.1.7",
+    "@types/passport-google-oauth20": "2.0.11",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "autoprefixer": "10.4.2",
+    "dotenv": "10.0.0",
+    "dotenv-expand": "5.1.0",
+    "husky": "7.0.4",
+    "lint-staged": "12.1.7",
+    "postcss": "8.4.5",
+    "preact": "10.6.4",
+    "prettier": "2.5.1",
+    "prisma": "3.7.0",
+    "tailwindcss": "2.2.19",
+    "ts-loader": "9.2.6",
+    "typescript": "4.5.4"
   }
 }
