use trpc and next-auth

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,10 @@
 NEXT_PUBLIC_APP_NAME=Next App
 NEXTAUTH_URL=http://localhost:3000
 
-DATABASE_URL="postgresql://postgres:pass@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:password@localhost:5432/mydb?schema=public"
 
-GITHUB_CLIENT_ID=xxx
-GITHUB_CLIENT_SECRET=xxx
+GITHUB_CLIENT_ID=
+GITHUB_CLIENT_SECRET=
 
 GOOGLE_CLIENT_ID=
 GOOGLE_CLIENT_SECRET=
@@ -14,4 +14,4 @@ AUTH_COOKIE_NAME=app.session-token
 AUTH_COOKIE_DOMAIN=
 
 # openssl rand -base64 32
-AUTH_SECRET=xxx
+AUTH_SECRET="MrzWOHW5uvEhF6FVXp1R/jhoGHKT4iJK00V4/7M/lH0="
