--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "prisma-client": "prisma generate",
     "migrate-dev": "prisma migrate dev",
     "migrate-deploy": "prisma migrate deploy",
-    "gql-gen": "graphql-codegen --config graphql-codegen.yml",
     "prepare": "husky install"
   },
   "lint-staged": {
@@ -16,39 +15,31 @@
     ]
   },
   "dependencies": {
-    "@prisma/client": "3.11.0",
-    "apollo-server-core": "3.6.4",
-    "apollo-server-micro": "3.6.4",
-    "class-validator": "0.13.2",
-    "cors": "2.8.5",
-    "graphql": "15.8.0",
-    "micro": "9.3.4",
-    "next": "12.1.0",
-    "next-connect": "0.12.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "4.2.1",
+    "@trpc/client": "^9.27.2",
+    "@trpc/next": "^9.27.2",
+    "@trpc/react": "^9.27.2",
+    "@trpc/server": "^9.27.2",
+    "next": "12.2.5",
+    "next-auth": "^4.10.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-query": "3",
     "reflect-metadata": "0.1.13",
-    "type-graphql": "1.1.1",
-    "urql": "2.2.0"
+    "zod": "^3.18.0"
   },
   "devDependencies": {
     "@egoist/prettier-config": "1.0.0",
-    "@graphql-codegen/cli": "2.6.2",
-    "@graphql-codegen/introspection": "2.1.1",
-    "@graphql-codegen/typescript": "2.4.8",
-    "@graphql-codegen/typescript-operations": "2.3.5",
-    "@graphql-codegen/typescript-urql": "3.5.6",
-    "@types/cors": "2.8.12",
-    "@types/node": "17.0.21",
-    "@types/react": "17.0.40",
-    "@types/react-dom": "17.0.13",
+    "@types/cookie": "^0.5.1",
+    "@types/node": "18.7.13",
+    "@types/react": "18.0.17",
     "autoprefixer": "10.4.4",
-    "husky": "7.0.4",
-    "lint-staged": "12.3.6",
-    "postcss": "8.4.12",
-    "preact": "10.6.6",
+    "husky": "8.0.1",
+    "lint-staged": "13.0.3",
+    "postcss": "8.4.16",
     "prettier": "2.6.0",
-    "prisma": "3.11.0",
+    "prisma": "4.2.1",
     "tailwindcss": "3.0.23",
     "typescript": "4.6.2"
   }
