--- a/package.json
+++ b/package.json
@@ -1,46 +1,11 @@
 {
   "private": true,
+  "name": "my-workspace",
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start --port $PORT",
-    "prisma-client": "prisma generate",
-    "migrate-dev": "prisma migrate dev",
-    "migrate-deploy": "prisma migrate deploy",
-    "prepare": "husky install"
-  },
-  "lint-staged": {
-    "*.{ts,tsx,json,md,css}": [
-      "prettier --write"
-    ]
-  },
-  "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.4",
-    "@prisma/client": "4.2.1",
-    "@trpc/client": "^9.27.2",
-    "@trpc/next": "^9.27.2",
-    "@trpc/react": "^9.27.2",
-    "@trpc/server": "^9.27.2",
-    "next": "12.2.5",
-    "next-auth": "^4.10.3",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-query": "3",
-    "reflect-metadata": "0.1.13",
-    "zod": "^3.18.0"
+    "dev": "pnpm --filter web dev",
+    "build": "pnpm --filter web build"
   },
   "devDependencies": {
-    "@egoist/prettier-config": "1.0.0",
-    "@types/cookie": "^0.5.1",
-    "@types/node": "18.7.13",
-    "@types/react": "18.0.17",
-    "autoprefixer": "10.4.4",
-    "husky": "8.0.1",
-    "lint-staged": "13.0.3",
-    "postcss": "8.4.16",
-    "prettier": "2.6.0",
-    "prisma": "4.2.1",
-    "tailwindcss": "3.0.23",
-    "typescript": "4.6.2"
+    "typescript": "5.1.6"
   }
 }
